--- a/homework/HW_session04/resume_respnsive.html
+++ b/homework/HW_session04/resume_respnsive.html
@@ -11,8 +11,24 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
     crossorigin="anonymous"
   />
+  <style>
+    .div_header{
+      background-color: black;
+      color: white;
+      width: 200px;
+      margin-left: 50px;
+    }
+  </style>
 </head>
 <body>
+    <div class="div_header">
+      RESUSME
+    </div>
+    <div class="info">
+      <div class="name">
+        ALAN WALKER
+      </div> 
+    </div>
     <div class="container text-center">
         <div class="row">
           <div class="col col-3">
