--- a/homework/HW_session7/readme.html
+++ b/homework/HW_session7/readme.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./Ex8_bt.js"></script>
+    <input type="number" id="n" value="a" />;
+    <button type="numer" onclick="b1()">
+        kiem tra chan le
+    </button>
+    
+    <script src="./readme.js"></script>
   </body>
 </html>
