--- a/practice/Practice6/confirm.html
+++ b/practice/Practice6/confirm.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="result"></div>
+    <div id="result">hihii</div>
     <button id="btn__delete" onclick="handleDelete()">Delete</button>
     <script src="./basic.js"></script>
 </body>
